js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/method-call-expression-bad-reference.js
DONOTEVALUATE
(
)
;
class
C
{
m
(
)
{
(
(
)
=
>
{
}
)
(
)
.
#
x
}
}
